# nfnull

./: README.md  license.txt  pyproject.toml
NFNull/: __init__.py  nfnull.py
nfnull/: __init__.py  nfnull.py
nfnull.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nfnull/notebooks/: exemplar_simulations.ipynb
paper/: Makefile  paper.bib  paper.md
tests/: test_nfnull.py
