[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfnull"
version = "0.1.0"
description = "Null density estimation using normalizing flows"
authors = [
    {name = "Kipper Fletez-Brant", email = "cafletezbrant@gmail.com"}
]
readme = "README.md"
license = {file = "license.txt"}
requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://github.com/Genentech/nfnull/tree/main"
"Bug Tracker" = "https://github.com/Genentech/nfnull/issues"

[tool.setuptools]
packages = ["nfnull"]

[project.optional-dependencies]
dev = [
    "black",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
# Exclude notebooks and other files
/(
  \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.ipynb$
)/
''' 